--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 plugins {
     id 'java-library'
-    id 'io.qameta.allure' version '2.12.0'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
-def selenideVersion = "7.8.1",
-    junitVersion = "5.10.0",
-    allureVersion = "2.21.0"
+repositories {
+    mavenCentral()
+}
+
+def allureVersion = "2.21.0",
+    selenideVersion = "6.19.1"
 
 allure {
     report {
@@ -21,25 +24,17 @@ allure {
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation (
+    testImplementation(
             "com.codeborne:selenide:$selenideVersion",
-            "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:2.0.7",
-            'com.github.javafaker:javafaker:1.0.2',
-            "io.qameta.allure:allure-selenide:$allureVersion")
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "org.junit.jupiter:junit-jupiter:5.10.0",
+            'org.slf4j:slf4j-simple:2.0.7'
+    )
+}
 
-}
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
 tasks.withType(Test) {
     useJUnitPlatform()
-    systemProperties(System.getProperties())
 
     testLogging {
         lifecycle {
