--- a/notifications/config.json
+++ b/notifications/config.json
@@ -4,7 +4,7 @@
     "environment": "some env",
     "comment": "some comment",
     "reportLink": "https://jenkins.autotests.cloud/job/qa.guru_grup_35_ArtemZ12/29/",
-    "language": "en",
+    "language": "ru",
     "messenger": "telegram",
     "allureFolder": "build/allure-report/",
     "enableChart": true
